# myPrplMesh

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  dctest.py
agent/config/: beerocks_agent.conf.in
agent/src/beerocks/fronthaul_manager/: fronthaul_manager_main.cpp
agent/src/beerocks/slave/: CMakeLists.txt  agent_db.cpp  agent_db.h  agent_ucc_listener.cpp  agent_ucc_listener.h  beerocks_agent_main.cpp  multi_vendor.cpp  multi_vendor.h  multi_vendor_airties.cpp  multi_vendor_sample.cpp  son_slave_thread.cpp  son_slave_thread.h  tlvf_airties_utils.cpp  tlvf_airties_utils.h  tlvf_sample_vendor_utils.cpp  tlvf_sample_vendor_utils.h  tlvf_utils.cpp  traffic_separation.cpp  traffic_separation.h
agent/src/beerocks/slave/nbapi/: CMakeLists.txt
agent/src/beerocks/slave/nbapi/odl/: agent.odl  agent.odl.in  slave_config.odl.in
ci/: easymesh_cert_version  platform.yml  templates.yml
ci/certification/: templates.yml
ci/certification/R4/: freedom.yml
ci/configuration/boardfarm/: turris-omnia-1.sh  turris-omnia-2.sh
ci/configuration/boardfarm/whm/: haze.sh  turris-omnia-1.sh
ci/configuration/certification/R1/: axepoint.sh  glinet-b1300.sh  turris-omnia.sh
cmake/: ConfigureOdl.cmake  multiap-helpers.cmake
common/beerocks/: CMakeLists.txt
common/beerocks/bcl/include/bcl/: beerocks_config_file.h  beerocks_defines.h  beerocks_os_utils.h  beerocks_ucc_listener.h  beerocks_utils.h
common/beerocks/bcl/include/bcl/network/: net_struct.h  network_utils.h  socket.h  sockets_impl.h  swap.h
common/beerocks/bcl/include/bcl/son/: son_wireless_utils.h
common/beerocks/bcl/source/: beerocks_cmdu_server_impl.cpp  beerocks_config_file.cpp  beerocks_event_loop_impl.cpp  beerocks_ucc_listener.cpp  beerocks_ucc_server_impl.cpp  beerocks_utils.cpp  beerocks_wifi_channel.cpp
common/beerocks/bcl/source/network/: network_utils.cpp  socket.cpp
common/beerocks/bcl/source/son/: son_wireless_utils.cpp
common/beerocks/bcl/unit_tests/: beerocks_wifi_channel_test.cpp
common/beerocks/bwl/dummy/: ap_wlan_hal_dummy.cpp  ap_wlan_hal_dummy.h  base_wlan_hal_dummy.cpp  base_wlan_hal_dummy.h  sta_wlan_hal_dummy.cpp  sta_wlan_hal_dummy.h
common/beerocks/bwl/dwpal/: ap_wlan_hal_dwpal.cpp  ap_wlan_hal_dwpal.h  base_wlan_hal_dwpal.cpp  base_wlan_hal_dwpal.h  sta_wlan_hal_dwpal.cpp  sta_wlan_hal_dwpal.h
common/beerocks/bwl/dwpald/: ap_wlan_hal_dwpald.cpp  ap_wlan_hal_dwpald.h  base_wlan_hal_dwpald.cpp  base_wlan_hal_dwpald.h  sta_wlan_hal_dwpald.cpp  sta_wlan_hal_dwpald.h
common/beerocks/bwl/include/bwl/: ap_wlan_hal.h  base_802_11_defs.h  base_wlan_hal.h  base_wlan_hal_types.h  mon_wlan_hal_types.h  sta_wlan_hal.h
common/beerocks/bwl/nl80211/: ap_wlan_hal_nl80211.cpp  ap_wlan_hal_nl80211.h  base_wlan_hal_nl80211.cpp  base_wlan_hal_nl80211.h  sta_wlan_hal_nl80211.cpp  sta_wlan_hal_nl80211.h
common/beerocks/bwl/whm/: ap_wlan_hal_whm.cpp  ap_wlan_hal_whm.h  base_wlan_hal_whm.cpp  base_wlan_hal_whm.h  mon_wlan_hal_whm.cpp  mon_wlan_hal_whm.h  sta_wlan_hal_whm.cpp  sta_wlan_hal_whm.h
common/beerocks/multi_vendor/: CMakeLists.txt  multi_vendor.cpp  multi_vendor.h
common/beerocks/multi_vendor/airties/include/: tlvf_airties_utils.h
common/beerocks/multi_vendor/airties/src/: multi_vendor_airties.cpp  tlvf_airties_utils.cpp
common/beerocks/multi_vendor/dummy/: multi_vendor_airties_dummy.cpp  tlvf_airties_utils_dummy.cpp  tlvf_airties_utils_dummy.h
common/beerocks/multi_vendor/example/include/: tlvf_example_vendor_utils.h  tlvf_vendor_example_utils.h
common/beerocks/multi_vendor/example/src/: multi_vendor_example.cpp  tlvf_example_vendor_utils.cpp  tlvf_vendor_example_utils.cpp
common/beerocks/scripts/: beerocks_watchdog.sh.in  prplmesh_utils.sh.in
common/beerocks/tlvf/AutoGenerated/include/beerocks/tlvf/: beerocks_message_action.h  beerocks_message_apmanager.h  beerocks_message_common.h  beerocks_message_control.h
common/beerocks/tlvf/AutoGenerated/src/beerocks/tlvf/: beerocks_message_apmanager.cpp  beerocks_message_control.cpp
common/beerocks/tlvf/yaml/beerocks/tlvf/: beerocks_message_action.yaml  beerocks_message_apmanager.yaml  beerocks_message_common.yaml  beerocks_message_control.yaml
controller/config/: beerocks_controller.conf.in
controller/nbapi/: CMakeLists.txt  on_action.cpp
controller/nbapi/odl/: access_point.odl.in  agent_connected_event.odl.in  agent_disconnected_event.odl.in  association_event.odl.in  bss.odl.in  capabilities.odl.in  controller.odl.in  device.odl.in  disassociation_event.odl.in  failed_connection_event.odl.in  master_config.odl.in  radio.odl.in  scan_result.odl.in  sta.odl.in  unassociated_sta.odl.in
controller/nbapi/odl/defaults.d/: 00_test_defaults.odl.in  01_master_configuration.odl.in  02_slave_configuration.odl.in
documentation/: prplMesh-configuration.md
framework/common/: encryption.cpp  utils.cpp
framework/platform/: CMakeLists.txt
framework/platform/bpl/: CMakeLists.txt
framework/platform/nbapi/: ambiorix_impl.cpp
framework/platform/wbapi/: CMakeLists.txt  ambiorix_connection.cpp  wbapi_utils.cpp
framework/tlvf/: tlvf_conf.yaml
framework/transport/ieee1905_transport/: ieee1905_transport_network.cpp  ieee1905_transport_packet_processing.cpp  main.cpp
tests/: environment.py
tests/boardfarm_plugins/boardfarm_prplmesh/: testsuites.cfg
tests/openwrt/: capture_logs.sh
tools/: deploy_firmware.py  deploy_ipk.sh  get-git-hash.sh
tools/device/: freedom.py  get_device.py
tools/docker/boardfarm-ci/: Dockerfile  requirements.txt
tools/docker/builder/rdk-b/: build.sh  (+1 more)
tools/nbapi-docgen/: parse_api.sh
vendor_message/: CMakeLists.txt  beerocks_vendor_message_main.cpp  vendor_message_slave.cpp  vendor_message_slave.h
vendor_message/airties/: airties_utils.cpp  airties_utils.h
vendor_message/airties/dummy/: airties_utils_dummy.cpp  airties_utils_dummy.h
vendor_message/common/: common_utility.cpp  common_utility.h
vendor_message/dummy/: common_utility_dummy.cpp
vendor_message/include/: vendor_message_slave.h
vendor_message/src/: beerocks_vendor_message_main.cpp  vendor_message_slave.cpp
(+232 files in other folders)
