add_subdirectory(bcl)
add_subdirectory(btl)
add_subdirectory(bwl)
add_subdirectory(hostapd)
add_subdirectory(scripts)
add_subdirectory(tlvf)
add_subdirectory(multi_vendor)

# BWL depends on BCL, so make sure it's built first
add_dependencies(bwl bcl)
add_dependencies(btlvf bcl)
add_dependencies(btl btlvf)
add_dependencies(multi_vendor nbapi)
add_dependencies(multi_vendor bcl)
add_dependencies(multi_vendor bwl)
add_dependencies(multi_vendor btlvf)
add_dependencies(multi_vendor tlvf)
